Estrutura html e style css prontos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    <head>
+    <header>
         <div id="title">
             <h1>Marketing</h1>
             <h1>Criativo</h1>
@@ -22,13 +22,13 @@
             <a href="#"><li>Serviços</li></a>
             <a href="#"><li>Sobre</li></a>
             <a href="#"><li>Contato</li></a>
-            <a href="#"><li>Já tem uma conta?</li></a>
+            <a href="#" id="inscreva-se-btn"><li>Já tem uma conta?</li></a>
         </ul>
-    </head>
+    </header>
 
     <main>
         <aside>
-            <h2>Insecreva-se agora</h2>
+            <h2><span>Insecreva-se agora</span></h2>
             <h2>Na Newlatter</h2>
             <p>
                 Olá! Me chamo Paulo Roberto, sou apaixonado por tecnologia e tudo que envolve esse universo maravilhoso 
